--- a/configure.in
+++ b/configure.in
@@ -1,6 +1,6 @@
 dnl Process this file with autoconf to produce a configure script.
 
-AC_INIT(kdepim_sync, 0.82) dnl a source file from your sub dir
+AC_INIT(kdepim_sync, 0.82, libopensync-plugin-kdepim) dnl a source file from your sub dir
 AC_CONFIG_SRCDIR(src/kdepim_sync.cpp)
 AM_INIT_AUTOMAKE([foreign])
 
