--- a/Makefile.am
+++ b/Makefile.am
@@ -17,9 +17,10 @@ plugin_LTLIBRARIES = kdepim_sync.la kdepim_lib.la
 # format_LTLIBRARIES = kcal_format.la
 
 EXTRA_DIST = \
-			src/kaddrbook.h \
-			src/kcal.h \
-			src/osyncbase.h
+	src/kaddrbook.h \
+	src/kcal.h \
+	src/osyncbase.h \
+	src/knotes.h
 
 # kcal_format_la_SOURCES = src/kcal_format.cpp
 # kcal_format_la_LDFLAGS = -avoid-version -export-dynamic -module
@@ -30,13 +31,13 @@ kdepim_sync_la_CXXFLAGS = -DPLUGINDIR=\"$(plugindir)\" -DKDEPIM_LIBDIR=\"$(plugi
 kdepim_sync_la_LDFLAGS = -avoid-version -export-dynamic -module
 
 # ugly hack to make the c++ library work
-kdepim_sync_la_LIBADD = -lstdc++
+kdepim_sync_la_LIBADD = -lstdc++ -L@OPENSYNC_LIBDIR@
 
 kdepim_lib_la_SOURCES = src/kdepim_impl.cpp \
                          src/kcal.cpp \
                          src/knotes.cpp
 kdepim_lib_la_CXXFLAGS = -DPLUGINDIR=\"$(plugindir)\" -DKDEPIM_LIBDIR=\"$(plugindir)\" -Wall -Werror
 kdepim_lib_la_LDFLAGS = $(KDE_LDFLAGS) -avoid-version -export-dynamic -module
-kdepim_lib_la_LIBADD = $(KDE_RPATH) $(LIB_KABC) $(LIB_KCAL) -L$(libdir) -lopensync-xml
+kdepim_lib_la_LIBADD = $(KDE_RPATH) $(LIB_KABC) $(LIB_KCAL) -L$(libdir)  -L@OPENSYNC_LIBDIR@ -lopensync-xml
 
 
