--- a/configure.in
+++ b/configure.in
@@ -1,8 +1,10 @@
 dnl Process this file with autoconf to produce a configure script.
 
-AC_INIT(kdepim_sync, 0.82, libopensync-plugin-kdepim) dnl a source file from your sub dir
+AC_PREREQ(2.58)
+AC_INIT([OpenSync Kdepim Plugin], 0.15, [], [libopensync-plugin-kdepim])
+AM_INIT_AUTOMAKE(foreign)
 AC_CONFIG_SRCDIR(src/kdepim_sync.cpp)
-AM_INIT_AUTOMAKE([foreign])
+AC_CONFIG_HEADER(config.h)
 
 dnl Checks for programs.
 AC_CHECK_COMPILERS
@@ -29,12 +31,14 @@ OPENSYNC_PLUGINDIR=$(pkg-config --variable=plugindir opensync-1.0)
 OPENSYNC_FORMATSDIR=$(pkg-config --variable=formatsdir opensync-1.0)
 OPENSYNC_HEADERDIR=$(pkg-config --variable=headerdir opensync-1.0)
 OPENSYNC_INCLUDEDIR=$(pkg-config --variable=includedir opensync-1.0)
+OPENSYNC_LIBDIR=$(pkg-config --variable=libdir opensync-1.0)
 
 AC_SUBST(OPENSYNC_CONFIGDIR)
 AC_SUBST(OPENSYNC_PLUGINDIR)
 AC_SUBST(OPENSYNC_FORMATSDIR)
 AC_SUBST(OPENSYNC_HEADERDIR)
 AC_SUBST(OPENSYNC_INCLUDEDIR)
+AC_SUBST(OPENSYNC_LIBDIR)
 
 ## AC_CHECK_HEADER(${$ac_kde_includes}/libkcal/resourcecalendar.h)
 
