svn merge -r 454:474 ../../branches/experimental-kdepim/ .
Merged changes to should have gone into the trunk plugin


git-svn-id: http://svn.opensync.org/plugins/kdepim@475 53f5c7ee-bee3-0310-bbc5-ea0e15fffd5e

--- a/Makefile.am
+++ b/Makefile.am
@@ -3,7 +3,7 @@ SUBDIRS = tests
 
 plugindir=@OPENSYNC_PLUGINDIR@
 
-INCLUDES = $(OSYNC_CFLAGS) $(XML_CFLAGS) $(GLIB_CFLAGS) $(KDE_INCLUDES) $(QT_INCLUDES)
+INCLUDES = $(OSYNC_CFLAGS) $(XML_CFLAGS) $(GLIB_CFLAGS) $(KDE_INCLUDES) $(QT_INCLUDES) -I$(top_srcdir)
 AM_CXXFLAGS = -Wall -Werror
 
 #FIXME: Is there a KDE macro to set this?
@@ -19,10 +19,10 @@ EXTRA_DIST = \
 	src/KNotesIface.h
 	
 CLEANFILES = \
-	src/KNotesIface_stub.h \
-	src/KNotesIface_skel.cpp \
-	src/KNotesIface_stub.cpp \
-	src/KNotesIface.kidl
+	KNotesIface_stub.h \
+	KNotesIface_skel.cpp \
+	KNotesIface_stub.cpp \
+	KNotesIface.kidl
 
 kdepim_sync_la_SOURCES = src/kdepim_sync.cpp
 kdepim_sync_la_CXXFLAGS = -DPLUGINDIR=\"$(plugindir)\" -DKDEPIM_LIBDIR=\"$(plugindir)\" -Wall -Werror
@@ -32,16 +32,21 @@ kdepim_sync_la_LDFLAGS = -avoid-version -export-dynamic -module
 kdepim_sync_la_LIBADD = -lstdc++ -L@OPENSYNC_LIBDIR@
 
 dist_kdepim_lib_la_SOURCES = \
+	KNotesIface_stub.h \
 	src/kdepim_impl.cpp \
 	src/kcal.cpp \
 	src/KNotesIface_stub.h \
 	src/knotes.cpp \
 	src/kaddrbook.cpp
-nodist_kdepim_lib_la_SOURCES = src/KNotesIface_stub.h src/KNotesIface_stub.cpp
+nodist_kdepim_lib_la_SOURCES = KNotesIface_stub.h KNotesIface_stub.cpp
 kdepim_lib_la_CXXFLAGS = -DPLUGINDIR=\"$(plugindir)\" -DKDEPIM_LIBDIR=\"$(plugindir)\" -Wall -Werror
 kdepim_lib_la_LDFLAGS = $(KDE_LDFLAGS) -avoid-version -export-dynamic -module
 kdepim_lib_la_LIBADD = $(KDE_RPATH) $(LIB_KABC) $(LIB_KCAL) -L$(libdir)  -L@OPENSYNC_LIBDIR@ -lopensync-xml
 
-src/KNotesIface_stub.h:
-	dcopidl src/KNotesIface.h > src/KNotesIface.kidl
-	dcopidl2cpp src/KNotesIface.kidl
+KNotesIface_stub.h:
+	dcopidl $(top_srcdir)/src/KNotesIface.h > KNotesIface.kidl
+	dcopidl2cpp KNotesIface.kidl
+KNotesIface_stub.cpp:
+	dcopidl $(top_srcdir)/src/KNotesIface.h > KNotesIface.kidl
+	dcopidl2cpp KNotesIface.kidl
+
