--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -2,4 +2,4 @@
 
 EXTRA_DIST = check_contact check_event check_todo check_note
 
-TESTS = check_contact check_event check_todo
+TESTS = check_contact check_event check_todo check_note
