--- a/Makefile.am
+++ b/Makefile.am
@@ -31,22 +31,18 @@ kdepim_sync_la_LDFLAGS = -avoid-version -export-dynamic -module
 # ugly hack to make the c++ library work
 kdepim_sync_la_LIBADD = -lstdc++ -L@OPENSYNC_LIBDIR@
 
-dist_kdepim_lib_la_SOURCES = \
-	KNotesIface_stub.h \
-	src/kdepim_impl.cpp \
-	src/kcal.cpp \
-	src/KNotesIface_stub.h \
-	src/knotes.cpp \
-	src/kaddrbook.cpp
-nodist_kdepim_lib_la_SOURCES = KNotesIface_stub.h KNotesIface_stub.cpp
-kdepim_lib_la_CXXFLAGS = -DPLUGINDIR=\"$(plugindir)\" -DKDEPIM_LIBDIR=\"$(plugindir)\" -Wall -Werror
-kdepim_lib_la_LDFLAGS = $(KDE_LDFLAGS) -avoid-version -export-dynamic -module
-kdepim_lib_la_LIBADD = $(KDE_RPATH) $(LIB_KABC) $(LIB_KCAL) -L$(libdir)  -L@OPENSYNC_LIBDIR@ -lopensync-xml
+src/kdepim_impl.cpp: KNotesIface_stub.h
 
 KNotesIface_stub.h:
 	dcopidl $(top_srcdir)/src/KNotesIface.h > KNotesIface.kidl
 	dcopidl2cpp KNotesIface.kidl
-KNotesIface_stub.cpp:
-	dcopidl $(top_srcdir)/src/KNotesIface.h > KNotesIface.kidl
-	dcopidl2cpp KNotesIface.kidl
 
+dist_kdepim_lib_la_SOURCES = \
+	src/kdepim_impl.cpp \
+	src/kcal.cpp \
+	src/knotes.cpp \
+	src/kaddrbook.cpp 
+nodist_kdepim_lib_la_SOURCES = KNotesIface_stub.cpp
+kdepim_lib_la_CXXFLAGS = -DPLUGINDIR=\"$(plugindir)\" -DKDEPIM_LIBDIR=\"$(plugindir)\" -Wall -Werror
+kdepim_lib_la_LDFLAGS = $(KDE_LDFLAGS) -avoid-version -export-dynamic -module
+kdepim_lib_la_LIBADD = $(KDE_RPATH) $(LIB_KABC) $(LIB_KCAL) -L$(libdir)  -L@OPENSYNC_LIBDIR@ -lopensync-xml
