KDE has lots of broken classes and GCC 4 is better at detecting these. There was no easy way to remove the warnings so -Werror has to be removed until KDE is fixed to play nice with GCC 4.
git-svn-id: http://svn.opensync.org/plugins/kdepim@480 53f5c7ee-bee3-0310-bbc5-ea0e15fffd5e

--- a/Makefile.am
+++ b/Makefile.am
@@ -4,7 +4,9 @@ SUBDIRS = tests
 plugindir=@OPENSYNC_PLUGINDIR@
 
 INCLUDES = $(OSYNC_CFLAGS) $(XML_CFLAGS) $(GLIB_CFLAGS) $(KDE_INCLUDES) $(QT_INCLUDES) -I$(top_srcdir)
-AM_CXXFLAGS = -Wall -Werror
+# KDE has broken classes so -Werror cannot be used (lots of non-virtual
+# destructors in polymorphic classes).
+AM_CXXFLAGS = -Wall
 
 #FIXME: Is there a KDE macro to set this?
 LIB_KCAL = -lkcal
@@ -25,7 +27,7 @@ CLEANFILES = \
 	KNotesIface.kidl
 
 kdepim_sync_la_SOURCES = src/kdepim_sync.cpp
-kdepim_sync_la_CXXFLAGS = -DPLUGINDIR=\"$(plugindir)\" -DKDEPIM_LIBDIR=\"$(plugindir)\" -Wall -Werror
+kdepim_sync_la_CXXFLAGS = -DPLUGINDIR=\"$(plugindir)\" -DKDEPIM_LIBDIR=\"$(plugindir)\" -Wall
 kdepim_sync_la_LDFLAGS = -avoid-version -export-dynamic -module
 
 # ugly hack to make the c++ library work
@@ -43,6 +45,6 @@ dist_kdepim_lib_la_SOURCES = \
 	src/knotes.cpp \
 	src/kaddrbook.cpp 
 nodist_kdepim_lib_la_SOURCES = KNotesIface_stub.cpp
-kdepim_lib_la_CXXFLAGS = -DPLUGINDIR=\"$(plugindir)\" -DKDEPIM_LIBDIR=\"$(plugindir)\" -Wall -Werror
+kdepim_lib_la_CXXFLAGS = -DPLUGINDIR=\"$(plugindir)\" -DKDEPIM_LIBDIR=\"$(plugindir)\" -Wall
 kdepim_lib_la_LDFLAGS = $(KDE_LDFLAGS) -avoid-version -export-dynamic -module
 kdepim_lib_la_LIBADD = $(KDE_RPATH) $(LIB_KABC) $(LIB_KCAL) -L$(libdir)  -L@OPENSYNC_LIBDIR@ -lopensync-xml
