Added a fix for parallel make
git-svn-id: http://svn.opensync.org/plugins/kdepim@517 53f5c7ee-bee3-0310-bbc5-ea0e15fffd5e

--- a/Makefile.am
+++ b/Makefile.am
@@ -35,7 +35,11 @@ kdepim_sync_la_LDFLAGS = -avoid-version -export-dynamic -module
 kdepim_sync_la_LIBADD = -lstdc++ -L@OPENSYNC_LIBDIR@ -lopensync
 
 src/kdepim_impl.cpp: KNotesIface_stub.h
+KNotesIface_stub.cpp: KNotesIface_stub.h
 
+KNotesIface_stub.cpp:
+	dcopidl $(top_srcdir)/src/KNotesIface.h > KNotesIface.kidl
+	dcopidl2cpp KNotesIface.kidl
 KNotesIface_stub.h:
 	dcopidl $(top_srcdir)/src/KNotesIface.h > KNotesIface.kidl
 	dcopidl2cpp KNotesIface.kidl
