Add src/kdepim-sync to EXTRA_DIST
Problem reported and fixed by Ian Turner. Thanks!



git-svn-id: http://svn.opensync.org/plugins/kdepim@1097 53f5c7ee-bee3-0310-bbc5-ea0e15fffd5e

--- a/Makefile.am
+++ b/Makefile.am
@@ -19,6 +19,7 @@ plugin_LTLIBRARIES = kdepim_sync.la kdepim_lib.la
 EXTRA_DIST = \
 	src/kaddrbook.h \
 	src/kcal.h \
+	src/kdepim-sync \
 	src/osyncbase.h \
 	src/knotes.h \
 	src/KNotesIface.h \
