--- a/configure.in
+++ b/configure.in
@@ -13,6 +13,7 @@ AC_PROG_LIBTOOL
 
 dnl for NLS support. Call them in this order!
 dnl WITH_NLS is for the po files
+KDE_SET_PREFIX
 AM_KDE_WITH_NLS
 
 KDE_USE_QT(3.0.0)
