removed kdepim.spec* from Makefile.am and configure.in
git-svn-id: http://svn.opensync.org/plugins/kdepim@1292 53f5c7ee-bee3-0310-bbc5-ea0e15fffd5e

--- a/Makefile.am
+++ b/Makefile.am
@@ -22,9 +22,7 @@ EXTRA_DIST = \
 	src/kdepim-sync \
 	src/osyncbase.h \
 	src/knotes.h \
-	src/KNotesIface.h \
-	misc/kdepim.spec \
-	misc/kdepim.spec.in
+	src/KNotesIface.h
 	
 CLEANFILES = \
 	KNotesIface_stub.h \
