--- a/configure.in
+++ b/configure.in
@@ -48,7 +48,7 @@ dnl PACKAGE set before
 AC_C_BIGENDIAN
 AC_CHECK_KDEMAXPATHLEN
 
-AC_CONFIG_FILES([ Makefile tests/Makefile misc/kdepim.spec ])
+AC_CONFIG_FILES([ Makefile tests/Makefile ])
 AC_OUTPUT
 
 if test "$all_tests" = "bad"; then
