First pass at cleaning up the kdepim plugin:  * create common class for all data sources (datasource.{cpp,h})  * put sink creation and callback functions here, removing all the    call-passing that was in src/kdepim_impl.cpp and src/kdepim_sync.cpp  * convert existing code to use this class and do some other cleanup
This works for me, but has the same limited support as before (ie. only 
the address book is implemented). The next step is to port the other 
data sources to the new class model.


git-svn-id: http://svn.opensync.org/plugins/kdepim@2277 53f5c7ee-bee3-0310-bbc5-ea0e15fffd5e

--- a/Makefile.am
+++ b/Makefile.am
@@ -46,11 +46,12 @@ kdepim_sync_la_LIBADD = -lstdc++ -L@OPENSYNC_LIBDIR@ -lopensync
 #	dcopidl $(top_srcdir)/src/KNotesIface.h > KNotesIface.kidl
 #	dcopidl2cpp KNotesIface.kidl
 
-dist_kdepim_lib_la_SOURCES = src/kdepim_impl.cpp src/kaddrbook.cpp
-#	src/kdepim_impl.cpp \
-#	src/kcal.cpp \
-#	src/knotes.cpp \
-#	src/kaddrbook.cpp 
+dist_kdepim_lib_la_SOURCES = \
+	src/kdepim_impl.cpp \
+	src/datasource.cpp \
+	src/kaddrbook.cpp
+#	src/kcal.cpp
+#	src/knotes.cpp
 #nodist_kdepim_lib_la_SOURCES = KNotesIface_stub.cpp
 kdepim_lib_la_CXXFLAGS = -DPLUGINDIR=\"$(plugindir)\" -DKDEPIM_LIBDIR=\"$(plugindir)\" -Wall
 kdepim_lib_la_LDFLAGS = $(KDE_LDFLAGS) -avoid-version -export-dynamic -module
