Further cleanup and updates to the kdepim plugin:  * Re-add support for event and todo object types  * Push more functionality into common code to reduce duplication    between contact and event/todo modules  * Remove unused wrapper for "read" callback  * Other cleanup
This is only lightly tested, and still under development. Syncing
events currently results in a failed assertion in the vformat converter
and empty event data in the other sync members.


git-svn-id: http://svn.opensync.org/plugins/kdepim@2293 53f5c7ee-bee3-0310-bbc5-ea0e15fffd5e

--- a/Makefile.am
+++ b/Makefile.am
@@ -49,8 +49,8 @@ kdepim_sync_la_LIBADD = -lstdc++ -L@OPENSYNC_LIBDIR@ -lopensync
 dist_kdepim_lib_la_SOURCES = \
 	src/kdepim_impl.cpp \
 	src/datasource.cpp \
-	src/kaddrbook.cpp
-#	src/kcal.cpp
+	src/kaddrbook.cpp \
+	src/kcal.cpp
 #	src/knotes.cpp
 #nodist_kdepim_lib_la_SOURCES = KNotesIface_stub.cpp
 kdepim_lib_la_CXXFLAGS = -DPLUGINDIR=\"$(plugindir)\" -DKDEPIM_LIBDIR=\"$(plugindir)\" -Wall
