Re-add support for syncing notes, based on old code from v0.2x. This doesn't break event/contact syncing, but is otherwise untested.
git-svn-id: http://svn.opensync.org/plugins/kdepim@2327 53f5c7ee-bee3-0310-bbc5-ea0e15fffd5e

--- a/Makefile.am
+++ b/Makefile.am
@@ -36,23 +36,23 @@ kdepim_sync_la_LDFLAGS = -avoid-version -export-dynamic -module
 # ugly hack to make the c++ library work
 kdepim_sync_la_LIBADD = -lstdc++ -L@OPENSYNC_LIBDIR@ -lopensync
 
-#src/kdepim_impl.cpp: KNotesIface_stub.h
-#KNotesIface_stub.cpp: KNotesIface_stub.h
+src/kdepim_impl.cpp: KNotesIface_stub.h
+KNotesIface_stub.cpp: KNotesIface_stub.h
 
-#KNotesIface_stub.cpp:
-#	dcopidl $(top_srcdir)/src/KNotesIface.h > KNotesIface.kidl
-#	dcopidl2cpp KNotesIface.kidl
-#KNotesIface_stub.h:
-#	dcopidl $(top_srcdir)/src/KNotesIface.h > KNotesIface.kidl
-#	dcopidl2cpp KNotesIface.kidl
+KNotesIface_stub.cpp:
+	dcopidl $(top_srcdir)/src/KNotesIface.h > KNotesIface.kidl
+	dcopidl2cpp KNotesIface.kidl
+KNotesIface_stub.h:
+	dcopidl $(top_srcdir)/src/KNotesIface.h > KNotesIface.kidl
+	dcopidl2cpp KNotesIface.kidl
 
 dist_kdepim_lib_la_SOURCES = \
 	src/kdepim_impl.cpp \
 	src/datasource.cpp \
 	src/kaddrbook.cpp \
-	src/kcal.cpp
-#	src/knotes.cpp
-#nodist_kdepim_lib_la_SOURCES = KNotesIface_stub.cpp
+	src/kcal.cpp \
+	src/knotes.cpp
+nodist_kdepim_lib_la_SOURCES = KNotesIface_stub.cpp
 kdepim_lib_la_CXXFLAGS = -DPLUGINDIR=\"$(plugindir)\" -DKDEPIM_LIBDIR=\"$(plugindir)\" -Wall
 kdepim_lib_la_LDFLAGS = $(KDE_LDFLAGS) -avoid-version -export-dynamic -module
 kdepim_lib_la_LIBADD = $(KDE_RPATH) $(LIB_KABC) $(LIB_KCAL) -L$(libdir)  -L@OPENSYNC_LIBDIR@ -lopensync
