Add datasource.h to EXTRA_DIST - Fixes #577
git-svn-id: http://svn.opensync.org/plugins/kdepim@2597 53f5c7ee-bee3-0310-bbc5-ea0e15fffd5e

--- a/Makefile.am
+++ b/Makefile.am
@@ -20,6 +20,7 @@ EXTRA_DIST = \
 	src/kaddrbook.h \
 	src/kcal.h \
 	src/kdepim-sync \
+	src/datasource.h \
 	src/osyncbase.h \
 	src/knotes.h \
 	src/KNotesIface.h
