Fixed build env of kdepim-sync. $PLUGINDIR/kdepim_lib.so was hardcoded...
What about writing a OpenSync cmake macro:
OPENSYNC_ADD_PLUGIN($NAME $SOURCE $LIBRARIES)
So we can handle versioning if needed, build type (SHARED/MODULE?!) and
libprefix and so on - in one place!



git-svn-id: http://svn.opensync.org/plugins/kdepim@2695 53f5c7ee-bee3-0310-bbc5-ea0e15fffd5e

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,24 +2,36 @@ INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_BINARY_DIR} ${OPENSYNC_INCLUDE_DIR} ${KDE3_
 
 # kdepim-sync sources
 SET( kdepim_sync_LIB_SRCS
+kdepim_sync.cpp
+)
+
+# kdepim-module sources
+SET( kdepim_module_LIB_SRCS
 datasource.cpp
 kaddrbook.cpp
 kcal.cpp
 kdepim_impl.cpp
-kdepim_sync.cpp
 knotes.cpp
 )
 
 ADD_DEFINITIONS( -DKDEPIM_LIBDIR="\\\"${OPENSYNC_PLUGINDIR}\\\"" )
 
-KDE3_ADD_DCOP_STUBS( kdepim_sync_LIB_SRCS KNotesIface.h )
+KDE3_ADD_DCOP_STUBS( kdepim_module_LIB_SRCS KNotesIface.h )
 
-ADD_LIBRARY( kdepim-sync SHARED ${kdepim_sync_LIB_SRCS} )
+
+SET( CMAKE_SHARED_MODULE_PREFIX "" )
+
+ADD_LIBRARY( kdepim-sync MODULE ${kdepim_sync_LIB_SRCS} )
+ADD_LIBRARY( kdepim_lib MODULE ${kdepim_module_LIB_SRCS} )
+
 
 TARGET_LINK_LIBRARIES( kdepim-sync ${OPENYNC_LIBRARIES} ${KDE3_LIBRARIES} ${KDEPIM3_KCAL_LIBRARIES} ${KDEPIM3_KABC_LIBRARIES} ${QT_LIBRARIES} )
 
+TARGET_LINK_LIBRARIES( kdepim_lib ${OPENYNC_LIBRARIES} ${KDE3_LIBRARIES} ${KDEPIM3_KCAL_LIBRARIES} ${KDEPIM3_KABC_LIBRARIES} ${QT_LIBRARIES} )
+
 # Install plugins	
-INSTALL( TARGETS kdepim-sync DESTINATION ${OPENSYNC_PLUGINDIR} )
+INSTALL( TARGETS kdepim_lib kdepim-sync DESTINATION ${OPENSYNC_PLUGINDIR} )
+
 
 # Install config template	
 INSTALL( FILES kdepim-sync DESTINATION ${OPENSYNC_CONFIGDIR} )
