Use OpenSyncPlugin CMake module and make the build env of the plugins a bit easier:
26 files changed, 142 insertions(+), 201 deletions(-)

Build plugins as modules not as shared libs....
Cutted prefix of modules to "" .. no annonying "lib" anymore... sorry
packagers.


git-svn-id: http://svn.opensync.org/plugins/kdepim@2711 53f5c7ee-bee3-0310-bbc5-ea0e15fffd5e

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
-PROJECT( kdepim-sync )
+PROJECT( libopensync-plugin-kdepim )
 
-SET( KDEPIMSYNC_VERSION "0.33" )	
+SET( VERSION "0.33" )	
 
 SET( CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/modules" )
 
@@ -11,14 +11,7 @@ FIND_PACKAGE( KDEPIM3 REQUIRED )
 
 INCLUDE( OpenSyncInternal )
 
-SET( CMAKE_BUILD_TYPE RelWithDebInfo )
-
 ADD_SUBDIRECTORY( src )
 
-## Packaging
-
-SET( CPACK_GENERATOR "TGZ;TBZ2" ) # This line is need for a CMake (Version 2.4.7) Bug - Fixed in CVS
-SET( CPACK_SOURCE_GENERATOR "TGZ;TBZ2")
-SET( CPACK_SOURCE_PACKAGE_FILE_NAME "libopensync-plugin-kdepim-${KDEPIMSYNC_VERSION}" )
-INCLUDE( CPack )
+OPENSYNC_PACKAGE( ${PROJECT_NAME} ${VERSION} )
 
