--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -18,21 +18,16 @@ ADD_DEFINITIONS( -DKDEPIM_LIBDIR="\\\"${OPENSYNC_PLUGINDIR}\\\"" )
 
 KDE3_ADD_DCOP_STUBS( kdepim_module_LIB_SRCS KNotesIface.h )
 
+OPENSYNC_PLUGIN_ADD( kdepim-sync ${kdepim_sync_LIB_SRCS} )
+OPENSYNC_PLUGIN_ADD( kdepim_lib ${kdepim_module_LIB_SRCS} )
 
-SET( CMAKE_SHARED_MODULE_PREFIX "" )
+TARGET_LINK_LIBRARIES( kdepim-sync ${KDE3_LIBRARIES} ${KDEPIM3_KABC_LIBRARIES} ${QT_LIBRARIES} ${KDEPIM3_KCAL_LIBRARIES} )
+TARGET_LINK_LIBRARIES( kdepim_lib ${KDE3_LIBRARIES} ${KDEPIM3_KABC_LIBRARIES} ${QT_LIBRARIES} ${KDEPIM3_KCAL_LIBRARIES} )
 
-ADD_LIBRARY( kdepim-sync MODULE ${kdepim_sync_LIB_SRCS} )
-ADD_LIBRARY( kdepim_lib MODULE ${kdepim_module_LIB_SRCS} )
-
-
-TARGET_LINK_LIBRARIES( kdepim-sync ${OPENYNC_LIBRARIES} ${KDE3_LIBRARIES} ${KDEPIM3_KCAL_LIBRARIES} ${KDEPIM3_KABC_LIBRARIES} ${QT_LIBRARIES} )
-
-TARGET_LINK_LIBRARIES( kdepim_lib ${OPENYNC_LIBRARIES} ${KDE3_LIBRARIES} ${KDEPIM3_KCAL_LIBRARIES} ${KDEPIM3_KABC_LIBRARIES} ${QT_LIBRARIES} )
-
-# Install plugins	
-INSTALL( TARGETS kdepim_lib kdepim-sync DESTINATION ${OPENSYNC_PLUGINDIR} )
-
+# Install plugins
+OPENSYNC_PLUGIN_INSTALL( kdepim-sync )
+OPENSYNC_PLUGIN_INSTALL( kdepim_lib )
 
 # Install config template	
-INSTALL( FILES kdepim-sync DESTINATION ${OPENSYNC_CONFIGDIR} )
+OPENSYNC_PLUGIN_CONFIG( kdepim-sync )
 
