Make sure plugins are consistently linked with $OPENSYNC_LIBRARIES
git-svn-id: http://svn.opensync.org/plugins/kdepim@2768 53f5c7ee-bee3-0310-bbc5-ea0e15fffd5e

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -21,8 +21,8 @@ KDE3_ADD_DCOP_STUBS( kdepim_module_LIB_SRCS KNotesIface.h )
 OPENSYNC_PLUGIN_ADD( kdepim-sync ${kdepim_sync_LIB_SRCS} )
 OPENSYNC_PLUGIN_ADD( kdepim_lib ${kdepim_module_LIB_SRCS} )
 
-TARGET_LINK_LIBRARIES( kdepim-sync ${KDE3_LIBRARIES} ${KDEPIM3_KABC_LIBRARIES} ${QT_LIBRARIES} ${KDEPIM3_KCAL_LIBRARIES} )
-TARGET_LINK_LIBRARIES( kdepim_lib ${KDE3_LIBRARIES} ${KDEPIM3_KABC_LIBRARIES} ${QT_LIBRARIES} ${KDEPIM3_KCAL_LIBRARIES} )
+TARGET_LINK_LIBRARIES( kdepim-sync ${OPENSYNC_LIBRARIES} ${KDE3_LIBRARIES} ${KDEPIM3_KABC_LIBRARIES} ${QT_LIBRARIES} ${KDEPIM3_KCAL_LIBRARIES} )
+TARGET_LINK_LIBRARIES( kdepim_lib ${OPENSYNC_LIBRARIES} ${KDE3_LIBRARIES} ${KDEPIM3_KABC_LIBRARIES} ${QT_LIBRARIES} ${KDEPIM3_KCAL_LIBRARIES} )
 
 # Install plugins
 OPENSYNC_PLUGIN_INSTALL( kdepim-sync )
