--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,5 @@
-INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_BINARY_DIR} ${OPENSYNC_INCLUDE_DIR} ${KDE3_INCLUDE_DIR} ${KDEPIM3_INCLUDE_DIR} ${QT_INCLUDE_DIR} )
+LINK_DIRECTORIES( ${OPENSYNC_LIBRARY_DIRS} )
+INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_BINARY_DIR} ${OPENSYNC_INCLUDE_DIRS} ${KDE3_INCLUDE_DIR} ${KDEPIM3_INCLUDE_DIR} ${QT_INCLUDE_DIR} )
 
 # kdepim-sync sources
 SET( kdepim_sync_LIB_SRCS
