Add opensync_min_version to all modules. I choosed 0.35 as a basis. Evolution already have a greater dependency. Upgrade as need be.
git-svn-id: http://svn.opensync.org/plugins/kdepim@3008 53f5c7ee-bee3-0310-bbc5-ea0e15fffd5e

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,8 @@ SET( VERSION "0.35" )
 
 SET( CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/modules" )
 
+SET( OPENSYNC_MIN_VERSION "0.35" )
+
 FIND_PACKAGE( OpenSync REQUIRED )
 FIND_PACKAGE( Qt3 REQUIRED )
 FIND_PACKAGE( KDEPIM3 REQUIRED )
