Ported kdepim-sync (only) to hashtable API changes - #746 TODO: further porting required for trunk API changes
git-svn-id: http://svn.opensync.org/plugins/kdepim@3489 53f5c7ee-bee3-0310-bbc5-ea0e15fffd5e

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,8 @@ SET( CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/modules" 
 
 SET( OPENSYNC_MIN_VERSION "0.36" )
 
+CMAKE_MINIMUM_REQUIRED( VERSION 2.4.4 )
+
 FIND_PACKAGE( OpenSync REQUIRED )
 FIND_PACKAGE( Qt3 REQUIRED )
 FIND_PACKAGE( KDEPIM3 REQUIRED )
