--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,11 @@ SET( OPENSYNC_MIN_VERSION "0.36" )
 
 CMAKE_MINIMUM_REQUIRED( VERSION 2.4.4 )
 
+IF(COMMAND cmake_policy)
+	cmake_policy(SET CMP0003 NEW)
+	cmake_policy(SET CMP0005 NEW)
+ENDIF(COMMAND cmake_policy)
+
 FIND_PACKAGE( OpenSync REQUIRED )
 FIND_PACKAGE( Qt3 REQUIRED )
 FIND_PACKAGE( KDEPIM3 REQUIRED )
